--- a/index.html
+++ b/index.html
@@ -137,13 +137,16 @@ body {font-family: "Lato", sans-serif}
   <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px; margin-top: -50px;" id="band">
     <h2 class="w3-wide">PRIMERA FILA</h2>
     <p class="w3-opacity"><i>We love music</i></p>
-    <p class="w3-justify">We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-      ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur
-      adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    <p class="w3-justify">We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
       <div class="w3-container">
       </div>
       
       <div class="w3-content w3-display-container" style="max-width:400px">
+        <div class="mySlidesaux">
+          <h3>Eduardo</h3>
+          <h4>Tecladista y voz principal</h4>
+          <img  src="int3.jpg" style="width:100%">
+        </div>
         <div class="mySlidesaux">
           <h3>Rodrigo</h3>
           <h4>Guitarrista</h4>
@@ -153,11 +156,6 @@ body {font-family: "Lato", sans-serif}
           <h3>Diego</h3>
           <h4>Baterista</h4>
           <img  src="int2.jpg" style="width:100%">
-        </div>
-        <div class="mySlidesaux">
-          <h3>Eduardo</h3>
-          <h4>Tecladista y voz principal</h4>
-          <img  src="int3.jpg" style="width:100%">
         </div>
         <div class="mySlidesaux">
           <h3>Pablo</h3>
