--- a/l2.html
+++ b/l2.html
@@ -13,11 +13,9 @@
 <a href="https://open.spotify.com/artist/71wwzYjBMuskYZsT7bNNrp?si=Kx9NG0hkQDmOmQmHvN8pBw&utm_source=copy-link&nd=1" class="float1" target="_blank">
   <i class="fa fa-spotify my-float1"></i>
 </a>
-
 <a href="https://www.instagram.com/primerafilaok" class="float2" target="_blank">
   <i class="fa fa-instagram my-float2"></i>
 </a>
-
 <style>
 body {font-family: "Lato", sans-serif}
 .mySlides {display: none}
@@ -32,11 +30,9 @@ a,a:hover {text-decoration: none}
     -moz-border-radius: 6px;
     -webkit-border-radius: 6px;
     border-radius: 6px;
-    -webkit-background-clip: padding-box;
 }
 .gradient {
     background-image: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.1) 100%);
-    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0)), color-stop(100%,rgba(0,0,0,0.1)));
     background-image: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.1) 100%);
     background-image: -o-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.1) 100%);
     background-image: -ms-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.1) 100%);
@@ -200,9 +196,10 @@ a.button_three span.txt:before { display: inline-block; margin: 0 10px 0 0; font
     </div>
   </div>
   <a href="ficha.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small nav-link js-scroll-trigger">FICHA TÉCNICA</a>
+  <a href="galery.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small nav-link js-scroll-trigger">GALERÍA</a>
 
     <a href="index.html#band" class="w3-bar-item w3-button w3-padding-large w3-hide-small js-scroll-trigger">PRIMERA FILA</a>
-    <a href="index.html#tour" class="w3-bar-item w3-button w3-padding-large w3-hide-small js-scroll-trigger">TRASTIENDA</a>
+    <a href="index.html#tour" class="w3-bar-item w3-button w3-padding-large w3-hide-small js-scroll-trigger">SHOWS</a>
     <a href="index.html#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CONTACTO</a>
   </div>
 </div>
@@ -239,7 +236,7 @@ a.button_three span.txt:before { display: inline-block; margin: 0 10px 0 0; font
     </span><br></span><br></span><br>
 </div>
 
-  <img class="image2" src="instrumento2.png" />
+  <img class="image2" style="max-width: 100%; height: auto; width: auto\9; /* ie8 */"  src="instrumento2.png" />
 
   
 
@@ -248,16 +245,14 @@ a.button_three span.txt:before { display: inline-block; margin: 0 10px 0 0; font
 <!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
 <div class="container">
     <div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
+      <a href="galery.html" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">GALERÍA </a>
+
       <a href="ficha.html" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">FICHA TÉCNICA </a>
       <a href="index.html#band" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">PRIMERA FILA</a>
-        <a href="index.html#tour" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">TRASTIENDA</a>
+        <a href="index.html#tour" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">SHOWS</a>
         <a href="index.html#contact" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">CONTACTO</a>
         <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">LETRAS </a>
     </div>
-</div>
-
-
-
 </div>
 
 <!-- Image of location/map 
