--- a/l7.html
+++ b/l7.html
@@ -200,9 +200,10 @@ a.button_three span.txt:before { display: inline-block; margin: 0 10px 0 0; font
         </div>
       </div>  
       <a href="ficha.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small nav-link js-scroll-trigger">FICHA TÉCNICA</a>
+      <a href="galery.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small nav-link js-scroll-trigger">GALERÍA</a>
 
     <a href="index.html#band" class="w3-bar-item w3-button w3-padding-large w3-hide-small js-scroll-trigger">PRIMERA FILA</a>
-    <a href="index.html#tour" class="w3-bar-item w3-button w3-padding-large w3-hide-small js-scroll-trigger">TRASTIENDA</a>
+    <a href="index.html#tour" class="w3-bar-item w3-button w3-padding-large w3-hide-small js-scroll-trigger">SHOWS</a>
     <a href="index.html#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CONTACTO</a>
   </div>
 </div>
@@ -227,16 +228,17 @@ a.button_three span.txt:before { display: inline-block; margin: 0 10px 0 0; font
     Vos te la pasabas reclamando, </span><br>
     Siempre en víctima, solo por molestar</span><br>
   </div>
-  <img class="image2" src="instrumento1.png" />  
+  <img class="image2" style="max-width: 100%; height: auto; width: auto\9; /* ie8 */"  src="instrumento1.png" />  
 </div>
 
 <!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
 <div class="container">
     <div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
       <a href="ficha.html" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">FICHA TÉCNICA </a>
-  
+      <a href="galery.html" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">GALERÍA </a>
+
       <a href="index.html#band" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">PRIMERA FILA</a>
-        <a href="index.html#tour" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">TRASTIENDA</a>
+        <a href="index.html#tour" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">SHOWS</a>
         <a href="index.html#contact" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">CONTACTO</a>
         <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">LETRAS </a>
     </div>
