--- a/letras.html
+++ b/letras.html
@@ -203,9 +203,10 @@ a.button_three span.txt:before { display: inline-block; margin: 0 10px 0 0; font
         </div>
       </div>
       <a href="ficha.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small nav-link js-scroll-trigger">FICHA TÉCNICA</a>
+      <a href="galery.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small nav-link js-scroll-trigger">GALERÍA</a>
 
     <a href="index.html#band" class="w3-bar-item w3-button w3-padding-large w3-hide-small js-scroll-trigger">PRIMERA FILA</a>
-    <a href="index.html#tour" class="w3-bar-item w3-button w3-padding-large w3-hide-small js-scroll-trigger">TRASTIENDA</a>
+    <a href="index.html#tour" class="w3-bar-item w3-button w3-padding-large w3-hide-small js-scroll-trigger">SHOWS</a>
     <a href="index.html#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CONTACTO</a>
   </div>
 </div>
@@ -213,9 +214,11 @@ a.button_three span.txt:before { display: inline-block; margin: 0 10px 0 0; font
 <!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
 <div class="container">
     <div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
+      <a href="galery.html" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">GALERÍA </a>
+
       <a href="ficha.html" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">FICHA TÉCNICA </a>  
       <a href="index.html#band" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">PRIMERA FILA</a>
-        <a href="index.html#tour" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">TRASTIENDA</a>
+        <a href="index.html#tour" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">SHOWS</a>
         <a href="index.html#contact" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">CONTACTO</a>
         <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">LETRAS </a>
     </div>
@@ -232,7 +235,7 @@ a.button_three span.txt:before { display: inline-block; margin: 0 10px 0 0; font
       <a class="trendy_btn radius gradient shadow" href="l7.html" title="Button Two"><span class="txt">Las patas de la cama</span></a>
       <a class="trendy_btn radius gradient shadow" href="l8.html" title="Button Three"><span class="txt">Hipnótica</span></a>
   </div>
-  <img class="image2" src="TapaDisco.png" />  
+  <img class="image2" style="max-width: 100%; height: auto; width: auto\9; /* ie8 */"  src="TapaDisco.png" />  
 </div>
 
 </div>
