--- a/index.html
+++ b/index.html
@@ -88,9 +88,10 @@ body {font-family: "Lato", sans-serif}
         <a href="l8.html" class="w3-bar-item w3-button">Hipnótica</a>
       </div>
     </div>
+    <a href="galery.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small nav-link js-scroll-trigger">GALERÍA</a>
     <a href="ficha.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small nav-link js-scroll-trigger">FICHA TÉCNICA</a>
     <a href="#band" class="w3-bar-item w3-button w3-padding-large w3-hide-small nav-link js-scroll-trigger">PRIMERA FILA</a>
-    <a href="#tour" class="w3-bar-item w3-button w3-padding-large w3-hide-small nav-link js-scroll-trigger">TRASTIENDA</a>
+    <a href="#tour" class="w3-bar-item w3-button w3-padding-large w3-hide-small nav-link js-scroll-trigger">SHOWS</a>
     <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small nav-link js-scroll-trigger">CONTACTO</a>
   </div>
 </div>
@@ -98,46 +99,26 @@ body {font-family: "Lato", sans-serif}
 <!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
 <div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
   <a href="letras.html" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">LETRAS </a>
+  <a href="galery.html" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">GALERÍA </a>
   <a href="ficha.html" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">FICHA TÉCNICA </a>
   <a href="#band" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">PRIMERA FILA</a>
-  <a href="#tour" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">TRASTIENDA</a>
+  <a href="#tour" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">SHOWS</a>
   <a href="#contact" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">CONTACTO</a>
 </div>
-
-<!-- Page content
-<div class="w3-content" style="max-width:2000px;margin-top:46px;">
-  <div class="mySlides w3-display-container w3-center" id="owl-demo">
-    <img class="d-block w-100" src="pf1.jpg" style="width:100%">
-  </div>
-  <div class="mySlides w3-display-container w3-center">
-    <img class="d-block w-100" src="pf2.jpg" style="width:100%">
-    </div>
-  <div class="mySlides w3-display-container w3-center">
-    <img class="d-block w-100" src="pf3.jpg" style="width:100%">
-  </div>
-  <div class="mySlides w3-display-container w3-center">
-    <img class="d-block w-100" src="pf4.jpg" style="width:100%">
-  </div>
-  <div class="mySlides w3-display-container w3-center">
-    <img class="d-block w-100" src="pf5.jpg" style="width:100%">
-  </div>
-</div>
--->
 
 <div class="w3-content" style="max-width:2000px;margin-top:46px;">
   <img class="mySlides d-block w-100 w3-animate-fading" src="pf1.jpg" style="width:100%">
   <img class="mySlides d-block w-100 w3-animate-fading" src="pf2.jpg" style="width:100%">
+  <img class="mySlides d-block w-100 w3-animate-fading" src="pf6.jpg" style="width:100%">
   <img class="mySlides d-block w-100 w3-animate-fading" src="pf3.jpg" style="width:100%">
   <img class="mySlides d-block w-100 w3-animate-fading" src="pf4.jpg" style="width:100%">
-  <img class="mySlides d-block w-100 w3-animate-fading" src="pf5.jpg" style="width:100%">
+  <img class="mySlides d-block w-100 w3-animate-fading" src="concierto4.jpg" style="width:100%">
 </div>
-
 
   <!-- The Band Section -->
   <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px; margin-top: -50px;" id="band">
     <h2 class="w3-wide">PRIMERA FILA</h2>
-    <p class="w3-opacity"><i>We love music</i></p>
-    <p class="w3-justify">We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+    <p class="w3-justify">".. Primera Fila nace por el año 1992 con un concepto de banda multimedia. Luego de varios shows y varias formaciones, tras una interrupción de casi 20 años, en donde los integrantes originales trabajaron en distintos proyectos, en dic de  2017 se relanza con integrantes originales y nuevos músicos que se suman a esta nueva etapa. Con dos EP publicados en todas las plataformas digitales, estamos listos para brindar todo nuestro potencial y vivir la música como una experiencia única y plena.."</p>
       <div class="w3-container">
       </div>
       
@@ -172,7 +153,16 @@ body {font-family: "Lato", sans-serif}
           <h4>Violinista y guitarrista</h4>
           <img  src="int6.jpg" style="width:100%">
         </div>
-      
+        <div class="mySlidesaux">
+          <h3>Camila</h3>
+          <h4>Corista</h4>
+          <img  src="int8.jpeg" style="width:100%">
+        </div>
+        <div class="mySlidesaux">
+          <h3>Gastón</h3>
+          <h4>Tecladista</h4>
+          <img  src="int7.jpeg" style="width:100%">
+        </div>
         <div class="w3-center w3-container w3-section w3-large w3-text-white w3-display-bottommiddle" style="width:100%">
           <div class="w3-left w3-hover-text-khaki" onclick="plusDivs(-1)">&#10094;</div>
           <div class="w3-right w3-hover-text-khaki" onclick="plusDivs(1)">&#10095;</div>
@@ -182,6 +172,8 @@ body {font-family: "Lato", sans-serif}
           <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(4)"></span>
           <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(5)"></span>
           <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(6)"></span>
+          <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(7)"></span>
+          <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(8)"></span>
         </div>
       </div>
 
