--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
   <i class="fa fa-instagram my-float2"></i>
 </a>
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-N7RTR77T02"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-N7RTR77T02');
+</script>
+
 <style>
 body {font-family: "Lato", sans-serif}
 .mySlides {display: none}
